# cmake_with_gtest

./: CMakeLists.txt
gtest/: CMakeLists.txt  gtest.cpp
include/2dtf/: 2dtf.cpp  2dtf.h
src/: main.cpp
